@@ -8,7 +8,7 @@ accessx-status/applet.c
 battstat/GNOME_BattstatApplet.server.in.in
 battstat/GNOME_BattstatApplet.xml
 battstat/battstat_applet.c
-battstat/battstat_applet.ui
+[type: gettext/glade]battstat/battstat_applet.ui
 battstat/battstat-hal.c
 battstat/battstat.schemas.in
 battstat/properties.c
@@ -21,7 +21,7 @@ charpick/properties.c
 cpufreq/GNOME_CPUFreqApplet.server.in.in
 cpufreq/GNOME_CPUFreqApplet.xml
 cpufreq/cpufreq-applet.schemas.in
-cpufreq/cpufreq-preferences.ui
+[type: gettext/glade]cpufreq/cpufreq-preferences.ui
 cpufreq/src/cpufreq-applet.c
 cpufreq/src/cpufreq-prefs.c
 cpufreq/src/cpufreq-monitor-cpuinfo.c
@@ -44,7 +44,7 @@ gkb-new/xmodmap.sun/base.xml.in
 gswitchit/GNOME_GSwitchItApplet.xml
 gswitchit/GNOME_KeyboardApplet.server.in.in
 gswitchit/gswitchit-applet.c
-gswitchit/gswitchit.ui
+[type: gettext/glade]gswitchit/gswitchit.ui
 gweather/GNOME_GWeatherApplet.xml
 gweather/GNOME_GWeatherApplet_Factory.server.in.in
 gweather/gweather-about.c
@@ -54,8 +54,8 @@ gweather/gweather-pref.c
 gweather/main.c
 invest-applet/data/Invest_Applet.server.in.in
 invest-applet/data/Invest_Applet.xml
-invest-applet/data/financialchart.ui
-invest-applet/data/prefs-dialog.ui
+[type: gettext/glade]invest-applet/data/financialchart.ui
+[type: gettext/glade]invest-applet/data/prefs-dialog.ui
 invest-applet/invest/about.py
 invest-applet/invest/applet.py
 invest-applet/invest/chart.py
@@ -76,7 +76,7 @@ mini-commander/src/history.c
 mini-commander/src/macro.c
 mini-commander/src/mc-install-default-macros.c
 mini-commander/src/mini-commander-global.schemas.in
-mini-commander/src/mini-commander.ui
+[type: gettext/glade]mini-commander/src/mini-commander.ui
 mini-commander/src/mini-commander.schemas.in
 mini-commander/src/mini-commander_applet.c
 mini-commander/src/preferences.c
@@ -90,7 +90,7 @@ mixer/preferences.c
 modemlights/GNOME_ModemLights.server.in.in
 modemlights/GNOME_ModemLights.xml
 modemlights/modem-applet.c
-modemlights/modemlights.ui
+[type: gettext/glade]modemlights/modemlights.ui
 multiload/GNOME_MultiLoadApplet_Factory.server.in.in
 multiload/GNOME_MultiloadApplet.xml
 multiload/linux-proc.c
@@ -108,7 +108,7 @@ stickynotes/data/GNOME_StickyNotesApplet.server.in
 stickynotes/GNOME_StickyNotesApplet.server.in.in
 stickynotes/GNOME_StickyNotesApplet.xml
 stickynotes/stickynotes.c
-stickynotes/stickynotes.ui
+[type: gettext/glade]stickynotes/stickynotes.ui
 stickynotes/stickynotes.schemas.in
 stickynotes/stickynotes_applet.c
 stickynotes/stickynotes_applet_callbacks.c
