@@ -1,3 +1,8 @@
+2008-10-17  Callum McKenzie  <callum@spooky-possum.org>
+
+	* POTFILES.in: Patch from Changwoo Ryu to put explicit type
+        information with the GtkBuilder files. Helps with bug 555656.
+
 2008-10-12  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Fixed a small typo.
